@@ -3,6 +3,7 @@ Release 0.19.1 - Unreleased
   BUG FIXES
    HBASE-1121  Cluster confused about where -ROOT- is
    HBASE-1148  Always flush HLog on root or meta region updates
+   HBASE-1129  Master won't go down; stuck joined on rootScanner 
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
